src/app/graph/add-graph/add-graph.component.scss
.upload-title {
  font-weight: bold;
  font-size: 1.5rem;
  padding-bottom: 1rem;
}

.formbold-file-input {
  position: relative;
}

.formbold-file-input input {
  cursor: pointer;
  opacity: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 2;
}

.formbold-file-input label {
  position: relative;
  border: 2px dashed #aaa;
  border-radius: 6px;
  min-height: 200px;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 48px;
  text-align: center;
}

.formbold-drop-file {
  display: block;
  font-weight: 600;
  color: var(--mat-sidenav-content-text-color);
  font-size: 20px;
  margin-bottom: 8px;
}

.formbold-or {
  font-weight: 500;
  font-size: 16px;
  color: #6b7280;
  display: block;
  margin-bottom: 8px;
}

.formbold-browse {
  font-weight: 500;
  font-size: 16px;
  color: var(--mat-sidenav-content-text-color);
  display: inline-block;
  padding: 8px 28px;
  border: 1px solid #e0e0e0;
  border-radius: 4px;
}

.isHighlighted {
  background-color: rgba(0, 0, 0, 0.1);
}

.container {
  display: flex;
  flex-direction: column;
  gap: 2rem;
}

.data-table {
  width: 100%;
  overflow-x: scroll;
}

.form-container {
  display: flex;
  align-items: center;
  flex-direction: row;
  gap: 2rem;
}

.fields-container {
  display: flex;
  gap: 1rem;
  align-self: flex-end;
}

